Dolphin upgraded to Vert.x 5